--- a/Source/app/src/main/res/layout/activity_show_product.xml
+++ b/Source/app/src/main/res/layout/activity_show_product.xml
@@ -10,41 +10,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-                <ImageButton
-                    android:id="@+id/menuButton"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:background="?attr/selectableItemBackground"
-                    android:src="@drawable/ic_menu"
-                    />
-                <androidx.appcompat.widget.SearchView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:theme="@style/Widget.AppCompat.SearchView.ActionBar"
-                    />
-                <ImageButton
-                    android:id="@+id/cartButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:background="?attr/selectableItemBackground"
-                    android:src="@drawable/ic_shoppingcart" />
-
+                    android:orientation="horizontal"
+                    android:weightSum="100">
+                    <ImageButton
+                        android:id="@+id/menuButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:background="?attr/selectableItemBackground"
+                        android:src="@drawable/ic_menu"
+                        android:layout_weight="20"
+                        />
+                    <androidx.appcompat.widget.SearchView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="60"
+                        />
+                    <ImageButton
+                        android:id="@+id/cartButton"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:background="?attr/selectableItemBackground"
+                        android:src="@drawable/ic_shoppingcart"
+                        android:layout_weight="20"/>
+                </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
-        </LinearLayout>
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
