--- a/Source/app/src/main/res/layout/activity_show_product.xml
+++ b/Source/app/src/main/res/layout/activity_show_product.xml
@@ -6,50 +6,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ShowProductActivity">
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="100">
-                    <ImageButton
-                        android:id="@+id/menuButton"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:background="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_menu"
-                        android:layout_weight="20"
-                        />
-                    <androidx.appcompat.widget.SearchView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="60"
-                        />
-                    <ImageButton
-                        android:id="@+id/cartButton"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:background="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_shoppingcart"
-                        android:layout_weight="20"/>
-                </LinearLayout>
-            </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ShowPrduct_MenuRecyclerView"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="horizontal" />
+        android:id="@+id/tv_showproduct"/>
+
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/ShowPrduct_MenuRecyclerView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scrollbars="horizontal" />-->
 
 </LinearLayout>
