--- a/Source/app/src/main/res/layout/item_menu_view.xml
+++ b/Source/app/src/main/res/layout/item_menu_view.xml
@@ -2,18 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <ImageButton
-        android:id="@+id/showProduct_itemMenu_imageButton"
+    android:orientation="horizontal">
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu" />
-
-    <TextView
-        android:id="@+id/showProduct_itemMenu_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Menu Item"
-        android:textAlignment="center" />
+        android:layout_height="50dp"
+        android:text="Iphone"
+        android:backgroundTint="#F48F8F"
+        android:id="@+id/bt_item_menu"
+        />
 
 </LinearLayout>
