--- a/Source/app/src/main/res/layout/activity_welcome.xml
+++ b/Source/app/src/main/res/layout/activity_welcome.xml
@@ -11,15 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg4"></ImageView>
+        android:src="@drawable/bg2"></ImageView>
 
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="280dp"
-        android:text="My restaurant"
+        android:text="Mobile Store"
         android:textColor="@color/white"
         android:textSize="40sp"></TextView>
 
@@ -27,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Có công ăn vặt, có ngày lên cân"
+        android:text="Uy tín làm nên thương hiệu"
         android:textColor="@color/white"
         android:textSize="20sp"></TextView>
 
