--- a/Source/app/src/main/res/layout/activity_login.xml
+++ b/Source/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,6 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:foreground="@drawable/btn_cat_background"
         android:scaleType="centerCrop"
         android:src="@drawable/bg1"
         tools:layout_editor_absoluteX="0dp"
@@ -24,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Phone Store"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Đăng nhập"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +56,7 @@
         android:layout_marginTop="30dp"
         android:drawableLeft="@drawable/baseline_account_circle_24"
         android:drawablePadding="13dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:hint="Tên tài khoản"
         android:textColorHint="#918B8B"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +76,7 @@
         android:drawablePadding="13dp"
         android:textColorHint="#918B8B"
         android:hint="Mật khẩu"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_fullname"
@@ -92,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bạn chưa có tài khoản?"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/txt_register"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Đăng kí"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textViewDaCoTK"
         app:layout_constraintEnd_toEndOf="parent"
