--- a/Source/app/src/main/res/layout/activity_register.xml
+++ b/Source/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,6 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:foreground="@drawable/btn_cat_background"
         android:scaleType="centerCrop"
         android:src="@drawable/bg1"
         tools:layout_editor_absoluteX="27dp"
@@ -23,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Phone Store"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Đăng kí"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +52,7 @@
         android:id="@+id/edt_fullname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_marginTop="30dp"
         android:drawableLeft="@drawable/baseline_account_circle_24"
         android:drawablePadding="13dp"
@@ -80,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_fullname"
         app:layout_constraintWidth_percent=".8"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         tools:ignore="MissingConstraints"></EditText>
 
 
@@ -93,7 +92,7 @@
         android:hint="Mật khẩu"
         android:layout_marginTop="10dp"
         android:textColorHint="#918B8B"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_email"
@@ -124,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bạn đã có tài khoản?"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/text_signin"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Đăng nhập"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
